# duck

./: CMakeLists.txt
inc/: duck.h
src/: duck.c
test/: duck.cc
